--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,7 @@
   border-radius: 10px;
   text-align: center;
   line-height: 1.8;
+  filter: drop-shadow(0px 6px 8px rgba(0, 0, 0, 0.25));
 }
 a{
   color: rgb(255,255,255);
@@ -63,6 +64,7 @@ a{
     -webkit-text-stroke-width: 1px;
     letter-spacing: -0.015em;
     line-height: 3.5rem;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   
   .subtitulo-t{
@@ -73,6 +75,7 @@ a{
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 
   .subtitulo-tam{
@@ -94,6 +97,7 @@ a{
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
     letter-spacing: -0.015em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   p{
       font-family: Fira Sans;
@@ -128,6 +132,7 @@ a{
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 2px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   .subtitulo-t{
     color: rgb(255,255,255);
@@ -137,6 +142,7 @@ a{
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   .subtitulo-tam{
     color: rgb(255,255,255);
@@ -146,6 +152,7 @@ a{
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   .subtitulo-2{
     text-align: center;
@@ -157,6 +164,7 @@ a{
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
     letter-spacing: -0.015em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   p{  
     font-family: Fira Sans;
@@ -189,6 +197,7 @@ a{
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 2px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   .subtitulo-t{
     color: rgb(255,255,255);
@@ -197,6 +206,7 @@ a{
     font-weight: 700;
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 0.8px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   .subtitulo-tam{
     color: rgb(255,255,255);
@@ -206,6 +216,7 @@ a{
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   .subtitulo-2{
     text-align: center;
@@ -217,6 +228,7 @@ a{
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
     letter-spacing: -0.015em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
   p{  
       font-family: Fira Sans;
