--- a/assets/css/vitoria.css
+++ b/assets/css/vitoria.css
@@ -28,6 +28,27 @@ p.points{
 
 /*DESKTOP*/
 @media(min-width: 1001px){
+
+  .titulo-vitoria{
+    color: rgb(255,255,255);
+    font-family: 'Luckiest Guy', cursive; 
+    font-size: 3.25rem;
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+    letter-spacing: -0.015em;
+    line-height: 3.7rem;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .subtitulo-vitoria{
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+    text-align: center;
+    color: #F0E2F3;
+  }
   
   .points-position-game{
     position: absolute;
@@ -41,6 +62,27 @@ p.points{
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
+
+  .titulo-vitoria{
+    color: rgb(255,255,255);
+    font-family: 'Luckiest Guy', cursive; 
+    font-size: 2.875rem;
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+    letter-spacing: -0.015em;
+    line-height: 3.25rem;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .subtitulo-vitoria{
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+    text-align: center;
+    color: #F0E2F3;
+  }
 
    /*Mesmo que display-center para manter a posição no tablet e mobile*/
    .points-position-game{
@@ -56,6 +98,27 @@ p.points{
 }
 /*MOBILE*/
 @media(max-width: 599px){ 
+
+  .titulo-vitoria{
+    color: rgb(255,255,255);
+    font-family: 'Luckiest Guy', cursive; 
+    font-size: 2.375rem;
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+    letter-spacing: -0.015em;
+    line-height: 2.65rem;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .subtitulo-vitoria{
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    text-align: center;
+    color: #F0E2F3;
+  }
 
    .points-position-game{
     display: flex;
