--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -49,7 +49,6 @@
     opacity: 1;
     z-index: -1;
 }
-
 .pair{
   animation-name: fadeIn;
   animation-delay: 2000ms;
@@ -57,6 +56,9 @@
   animation-fill-mode: forwards;
 }
 .hide-points-box{
+    display:none;
+}
+.score{
     display:none;
 }
 
@@ -168,5 +170,4 @@
     .b3{
         background: url("../img/mobile/fase3/verso3.png");
     }   
-  
 }
