--- a/assets/css/vitoria.css
+++ b/assets/css/vitoria.css
@@ -53,7 +53,8 @@ p.points{
   .points-position-game{
     position: absolute;
     left:51.8rem;
-    top: 37.5rem;
+    top: 37.0rem;
+    filter: drop-shadow(0px 6px 8px rgba(0, 0, 0, 0.25));
 }
   .medal{
     bottom: 1.5rem;
