--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -118,6 +118,15 @@ a{
     text-align: center;
     color: #FFFFFF;
   }
+  .destaque-sobre{
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 1.25rem;
+    line-height: 1.35rem;
+    text-align: left;
+    color: #FFFFFF;
+  }
 }
 
 /*TABLET */ 
