--- a/assets/css/sobre-o-jogo.css
+++ b/assets/css/sobre-o-jogo.css
@@ -1,5 +1,6 @@
 .list-sobre {
     color: #541663;
+    padding-left: 10px;
   }
 .list-hide-sobre{
     list-style-type: none;
@@ -14,5 +15,6 @@
     text-align: left;
     color: #FFFFFF;
   }
+ 
 /*TABLET*/
 /*DESKTOP*/
