--- a/assets/css/menu-desktop.css
+++ b/assets/css/menu-desktop.css
@@ -26,6 +26,15 @@
       .elem-menu-lateral p{
         text-align: left;
       }
+      .active{
+        background-color: rgb(136,69,153); /*trocar pra vh e vw*/
+        height: 48px;
+        width: 220px;
+        left: 10px;
+        right: 10px;
+        position: relative;
+        border-radius: 5px;
+    }
 }
   /*versão tablet */
   @media(min-width: 600px) and (max-width: 1000px){
