--- a/assets/css/menu-desktop.css
+++ b/assets/css/menu-desktop.css
@@ -51,6 +51,9 @@
         flex-wrap: wrap;
         justify-content: center;
       }
+      .adjust{
+        left: 8px;
+      }
 }
   /*versão tablet */
   @media(min-width: 600px) and (max-width: 1000px){
