--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,9 @@
   text-align: center;
   justify-content: center;
 }
+.espaco-0-5{
+  height: 4px;
+  }
 .espaco-1{
   height: 8px;
   }
@@ -94,7 +97,7 @@ a{
     text-align: center;
     color: rgb(255,255,255);
     font-size: 2.375rem;
-    line-height: 2.5rem;
+    line-height: 2.8rem;
     font-family: 'Luckiest Guy', cursive; 
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
@@ -174,7 +177,7 @@ a{
     font-style: normal;
     font-weight: 500;
     font-size: 1.5rem;
-    line-height: 1.5rem;
+    line-height: 1.87rem;
     text-align: center;
     color: #F0E2F3;
 }
@@ -252,13 +255,16 @@ a{
     color: #FFFFFF;
   }
    /*Botao do menu lateral*/
-   #btn-voltar-ms{
+  .btn-voltar-ms{
     padding-left: 4%;
     padding-top: 1%;
+    height:32px;
    }
-.img-voltar{
+ .img-voltar{
     width: 32px;
     height:32px;
+    position: absolute;
+    left:2vw;
 }
 }
  
