--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,6 +6,16 @@
         width: 26.75rem;
         height: 8rem;
       } 
+      #cookies-consent{
+        position: absolute;
+        bottom: 0%;
+        background-color: #541663;
+        opacity: 80%;
+        height: 20vh;
+        width: 100vw;
+        z-index: 20;
+        align-items: left;
+      }
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
@@ -13,11 +23,20 @@
         width: 26.75rem;
         height: 8rem;
       }
-       .logo-eic-index{
-        height: 80px;
-        position: fixed;
-        bottom: 5vh;
-        }
+    .logo-eic-index{
+    height: 80px;
+    position: fixed;
+    bottom: 5vh;
+    }
+    #cookies-consent{
+      position: absolute;
+      bottom: 0%;
+      background-color: #541663;
+      opacity: 80%;
+      height: 20vh;
+      width: 100vw;
+      z-index: 20;
+    }
 }
 /*MOBILE*/
 @media(max-width: 599px){ 
@@ -31,4 +50,13 @@
         position: fixed;
         bottom: 5vh;
         }
+    #cookies-consent{
+      position: absolute;
+      top: 78vh;
+      background-color: #541663;
+      opacity: 80%;
+      height: 24vh;
+      width: 102%;
+      z-index: 20;
+    }
 }
