Testes aviso de cookies

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,15 @@
 /*GLOBAL*/
-.hide-cookie{
+/*.hide-cookie{
   display: none !important; 
+}*/
+.toast{
+  background-color: #541663;
+  z-index:10;
 }
+.btn-cookies{
+    background: #a961bd;
+}
+
 
 /*DESKTOP*/
 @media(min-width: 1001px){
@@ -9,16 +17,18 @@
     width: 26.75rem;
     height: 8rem;
   } 
-  #cookies-consent{
+  .cookies-consent{
     position: absolute;
     bottom: 0%;
     background-color: #541663;
-    opacity: 80%;
-    height: 20vh;
-    width: 100vw;
-    z-index: 20;
-    align-items: left;
+    opacity: 100%;
+    z-index:10;
     }
+
+  .toast{
+    width: 96vw;
+    height: 10rem;
+  }
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
@@ -61,4 +71,5 @@
     width: 102%;
     z-index: 20;
   }
+  
 }
