--- a/assets/css/menu-modal.css
+++ b/assets/css/menu-modal.css
@@ -44,7 +44,7 @@
         padding-top: 16px;
         padding-left: 0;
         text-align: left;
-       /* z-index: -2;*/
+        z-index: -2;
     }
     .elem-menu-modal{
         width: 48vw;
