--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -46,12 +46,10 @@
     top: 250px;
     transition-property: top, opacity;
     transition-duration: 1.5s;
-    opacity: 1;
-    z-index: -1;
 }
 .pair{
   animation-name: fadeIn;
-  animation-delay: 2000ms;
+  animation-delay: 1000ms;
   animation-duration: 1000ms;
   animation-fill-mode: forwards;
 }
@@ -60,6 +58,11 @@
 }
 .score{
     display:none;
+}
+.hideMatchSing{
+    display:none;
+    z-index: 20;
+    position:absolute;
 }
 
 /*DESKTOP*/
