--- a/assets/css/menu-desktop.css
+++ b/assets/css/menu-desktop.css
@@ -16,7 +16,7 @@
       .logo-eic-centro{ /*logo do EIC**/
         position: relative;
         padding-left: 3vw;
-        width: 240px;
+        width: 240px; /* 240px, 80px**/
         height: 80px;
         margin-bottom: 40px;
       }
@@ -24,16 +24,19 @@
         width: 18,75rem;
         position: static;
         vertical-align: middle;
+        height: 60px;
       }
       .elem-menu-lateral img{ /*imagens menu lateral**/
         padding-left: 2rem;
         float: left;
         margin-right: 32px; 
-        width: 60px;       
+        width: 60px;  
+        height: 28px;     
       }
       .elem-menu-lateral p{ /*texto menu lateral**/
         text-align: left;
         padding-top: 3px;
+        height: 28px;
       }    
       /*.active:hover{
         background-color: rgb(136,69,153); 
