--- a/assets/css/menu-desktop.css
+++ b/assets/css/menu-desktop.css
@@ -1,118 +1,125 @@
  /*versão DESKTOP*/
  @media(MIN-width: 1001px){
   
-    .tipoUL{ /*menu lateral**/
-        list-style-type: none;
-        left: 80%;
-        margin: 0;
-        padding: 0;
-        width: 20%;
-        background-color: #541663;
-        height: 100%; 
-        position: absolute; 
-        overflow: hidden; 
-        text-align: left;
-      }
-      .logo-eic-centro{ /*logo do EIC**/
-        position: relative;
-        padding-left: 3vw;
-        width: 240px; /* 240px, 80px**/
-        height: 80px;
-        margin-bottom: 40px;
-      }
-      .elem-menu-lateral{
-        width: 18,75rem;
-        position: static;
-        vertical-align: middle;
-        height: 60px;
-      }
-      .elem-menu-lateral img{ /*imagens menu lateral**/
-        padding-left: 2rem;
-        float: left;
-        margin-right: 32px; 
-        width: 60px;  
-        height: 28px;     
-      }
-      .elem-menu-lateral p{ /*texto menu lateral**/
-        text-align: left;
-        padding-top: 3px;
-        height: 28px;
-      }    
-      /*.active:hover{
-        background-color: rgb(136,69,153); 
-        width: 220px;
-        left: 10px;
-        right: 10px;
-        position: relative;
-        border-radius: 5px;
-      }**/
-      
-      .elem-menu-lateral:hover{
-        background-color: rgb(136,69,153);
-        padding: 3%;                
-        position: relative;
-        width: 234px;
-        left: 20px;
-        right: 10px;
-        border-radius: 5px;
-        height: 48px;
-      }
-      .organize-elem-centro-coluna{
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .organize-elem-centro-linha{
-        align-items: center;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .adjust{
-        left: 8px;
-      }
+  .tipoUL{ /*menu lateral**/
+      list-style-type: none;
+      left: 80%;
+      margin: 0;
+      padding: 0;
+      width: 20%;
+      background-color: #541663;
+      height: 100%; 
+      position: absolute; 
+      overflow: hidden; 
+    }
+    .logo-eic-centro{ /*logo do EIC**/
+      position: relative;
+      padding-left: 3vw;
+      width: 240px;
+      height: 80px;
+      margin-bottom: 35px;
+    }
+    .elem-menu-lateral{
+      width: 18,75vw;
+      height:6vh;
+      position: static;
+      justify-content: center;
+    }
+    .elem-menu-lateral img{ /*imagens menu lateral**/
+      float: left;
+      padding-right: 32px; 
+      position:absolute;
+      left: 35px;
+      display: flex;
+      align-items: center;
+      transform: translateY(30%);
+    }
+    .elem-menu-lateral p{ /*texto menu lateral**/
+      text-align: left;
+      padding-top: 3px;
+      position:relative;
+      left: 115px;
+      transform: translateY(37%);
+    }    
+    /*.active:hover{
+      background-color: rgb(136,69,153); 
+      width: 220px;
+      left: 10px;
+      right: 10px;
+      position: relative;
+      border-radius: 5px;
+    }**/
+    
+    .elem-menu-lateral:hover{
+      background-color: rgb(136,69,153);
+      border-radius: 5px;
+      position: relative;
+      width: 234px;
+      left: 10px;
+      right: 10px;
+    }
+    .elem-menu-lateral:hover img{
+      left: 25px;
+    }
+    .elem-menu-lateral:hover p{
+      left: 105px;
+    }
+    .organize-elem-centro-coluna{
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .organize-elem-centro-linha{
+      align-items: center;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .adjust{
+      left: 8px;
+    }
 }
-  /*versão tablet */
-  @media(min-width: 600px) and (max-width: 1000px){
-    .menu-desktop{
-        display:none;
-      }
-    .ajuste-direita{
-        padding-left:24px ; 
-      }
-    .ajuste-esquerda{
-        padding-right:24px ;      
-      }
-     #logo-nav-sup-desktop{
-      width: 24px;
-      height:24px;
-     }
-      #logo-eic-nav-sup-desktop{
-        width: 28px;
-        height:28px;
-      }
- }
- /*versão mobile*/
- @media(max-width: 599px){
-    .menu-desktop{
-        display:none;
-        }
-    .ajuste-direita{
+/*versão tablet */
+@media(min-width: 600px) and (max-width: 1000px){
+  .menu-desktop{
+      display:none;
+    }
+  .ajuste-direita{
       padding-left:24px ; 
     }
-    .ajuste-esquerda{
+  .ajuste-esquerda{
       padding-right:24px ;      
     }
-    #logo-nav-sup-desktop{
-      width: 24px;
-      height:24px;
-     }
+   #logo-nav-sup-desktop{
+    width: 24px;
+    height:24px;
+   }
     #logo-eic-nav-sup-desktop{
       width: 28px;
       height:28px;
     }
- 
+}
+/*versão mobile*/
+@media(max-width: 599px){
+  .menu-desktop{
+      display:none;
+      }
+  .ajuste-direita{
+    padding-left:24px ; 
+  }
+  .ajuste-esquerda{
+    padding-right:24px ;      
+  }
+  #logo-nav-sup-desktop{
+    width: 24px;
+    height:24px;
+   }
+  #logo-eic-nav-sup-desktop{
+    width: 28px;
+    height:28px;
+  }
+
 }
