--- a/assets/css/menu-modal.css
+++ b/assets/css/menu-modal.css
@@ -6,23 +6,50 @@
   @media(max-width: 599px){
     
   .elem-menu-modal img{
-    padding-left: 3%;
+    position: relative;
+    left:15px;
     float: left;
+    vertical-align: center;
+  }
+  .elem-menu-modal p{
+    position: relative;
+    left: 45px;
+    text-align: left;
+    transform: translateY(25%);
   }
   .elem-modal-height{
     line-height: 20px;
     height: 20px;
   }
-   .tamanho-img-modal{
-       width: 32px;
-       height: 32px;
-   }
+  .tamanho-img-modal{
+    width: 32px;
+    height: 32px;
+  }
+  
    .logo-modal{
     padding-top: 6%;
     padding-left: -4%;
     padding-bottom: 8%;
   }
+  /*
+  .elem-menu-modal:hover{
+    background-color: rgb(136,69,153);
+    border-radius: 5px;
+    position: relative;
+    width: 235px;
+    height: 32px;
+    left: 10px;
+    right: 10px;
   }
+  .elem-menu-modal:hover img{
+    left: 32px;
+  }
+ .elem-menu-modal:hover p{
+    left: 105px;
+    }
+    */
+  }
+
    /*versão tablet */
    @media(min-width: 600px) and (max-width: 1000px){
     .tamanho-logo-modal{
