--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -3,6 +3,7 @@ height: 66px;
 width: 312px;
 left: 365px;
 top: 195px;
+padding-left: 1em;
 border-radius: 10px;
 border: 3px solid #884599 ;
 background: #F0C0F4;
@@ -18,11 +19,12 @@ margin-bottom: 1rem;
 }
 .subtitulo-3{
     padding-top: 8%;
+    padding-bottom: 4%;
     text-align: center;
     color: rgb(255,255,255);
     font-size: 2.375rem;
     line-height: 2.8rem;
-    font-family: 'Luckiest Guy', cursive; 
+    font-family: Luckiest Guy, cursive; 
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
@@ -32,4 +34,16 @@ margin-bottom: 1rem;
 .btn-entrar{
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+.label1{
+    font-family: Fira Sans;
+    width: 100%;
+    position: absolute;
+    color: #fff;
+    text-align: left;
+    padding-bottom: 0.2em;
+    font-weight: bold;
+}
+.pgn-cadastrar{
+    
 }
