--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -27,6 +27,57 @@
     width: 100vw;
     height: 8rem;
   }
+  .inputs-container{
+    height: 56px;
+    width: 300px;
+    left: 365px;
+    top: 195px;
+    padding-left: 1em;
+    border-radius: 10px;
+    border: 3px solid #884599 ;
+    background: #F0C0F4;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 0px;
+    -webkit-text-fill-color:#985193;
+    letter-spacing: -0.015em;
+    text-shadow: #884599;
+    margin: top 10px;
+    margin-bottom: 10px;
+    }
+
+    
+    .subtitulo-3{
+        padding-top: 8%;
+        padding-bottom: 4%;
+        text-align: center;
+        color: rgb(255,255,255);
+        font-size: 2.0rem;
+        line-height: 2.8rem;
+        font-family: Luckiest Guy, cursive; 
+        -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+        -webkit-text-stroke-color: #000000;
+        -webkit-text-stroke-width: 1px;
+        letter-spacing: -0.015em;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    .btn-entrar{
+        margin: top 10px;
+        margin-bottom: 1rem;
+    }
+    .label1{
+        font-family: Fira Sans;
+        width: 100%;
+        position: absolute;
+        color: #fff;
+        text-align: left;
+        padding-bottom: 0.2em;
+        font-weight: bold;
+    }
+    .pgn-cadastrar{
+        
+    }
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
