Correção dos styles do mobile no menu iniciar

--- a/assets/css/fim.css
+++ b/assets/css/fim.css
@@ -15,5 +15,17 @@
         bottom: 1.5rem;
         left: 2px;
     }
+    #trofeu-rkn{
+      height: 88.99998474121094px;
+      width: 93.88369750976562px;
+      top: 0px;
+      border-radius: 0px;
+      position: absolute;
+      left: 60%;
+      top: 8%;    
+    }
+    #ranking{
+      text-align: ;
+    }
     
   }
