--- a/assets/css/fim.css
+++ b/assets/css/fim.css
@@ -14,6 +14,24 @@
         position:relative;
         bottom: 1.5rem;
         left: 2px;
+
+        position: absolute;
+        width: 176px;
+        height: 54px;
+        left: 764px;
+        top: 228px;
+
+        font-family: Lohit Tamil;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 44px;
+        display: flex;
+        align-items: flex-end;
+        letter-spacing: -0.015em;
+
+        color: #FFFFFF;
+
     }
     #trofeu-rkn{
       height: 88.99998474121094px;
@@ -21,11 +39,47 @@
       top: 0px;
       border-radius: 0px;
       position: absolute;
-      left: 60%;
+      left: 50%;
       top: 8%;    
     }
-    #ranking{
-      text-align: ;
+    .ranking{
+      position: absolute;
+      width: 608px;
+      height: 44px;
+      left: 154px;
+      top: 243px;
+
+      font-family: Lohit Tamil;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 36px;
+      line-height: 44px;
+      /* identical to box height */
+
+      display: flex;
+      align-items: flex-end;
+      letter-spacing: -0.015em;
+
+      color: #FFFFFF;
     }
+    #inicio{
+      margin-top: 400px;
+    }
+    .subtitulo-4{
+      padding-top: 8%;
+      padding-bottom: 4%;
+      text-align: center;
+      color: rgb(255,255,255);
+      font-size: 2.0rem;
+      line-height: 2.8rem;
+      font-family: Luckiest Guy, cursive; 
+      -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+      -webkit-text-stroke-color: #000000;
+      -webkit-text-stroke-width: 1px;
+      letter-spacing: -0.015em;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      position: absolute;
+      left: 15%;
+      
     
   }
