--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -61,6 +61,9 @@
         -webkit-text-stroke-width: 1px;
         letter-spacing: -0.015em;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        left: 15%;
+          
+        
     }
     .btn-entrar{
         margin: top 10px;
