--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -73,11 +73,12 @@
     #container{
         width: 36rem; 
         height: 32rem;
-        top: 9rem;
-        left:16rem;
-        position: absolute;
+        top: 30px;
+        position: relative;
         margin: 0 auto;
         border-radius: 10px;
+        display: flex;
+        
        /* border: 1px solid #000; Visualizar melhor o tamanho do container*/
     }
 
