--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,6 +55,7 @@ a{
 }
 .btn-medio {
   background: #664F9F;
+  margin-bottom: 10px;
 }
 .btn-dificil {
   background: #CB5881;
@@ -234,7 +235,6 @@ a{
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   .subtitulo-2{
-    text-align: center;
     color: rgb(255,255,255);
     font-size: 2.375rem;
     line-height: 2.8rem;
@@ -244,6 +244,10 @@ a{
     -webkit-text-stroke-width: 1px;
     letter-spacing: -0.015em;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 }
   p{  
       font-family: Fira Sans;
