--- a/assets/css/vitoria.css
+++ b/assets/css/vitoria.css
@@ -52,10 +52,12 @@ p.points{
   }
   
   .points-position-game{
-    position: absolute;
-    left:51.8rem;
-    top: 37.0rem;
+    position: relative;
+    top: 5.0rem;
     filter: drop-shadow(0px 6px 8px rgba(0, 0, 0, 0.25));
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
   .medal{
     bottom: 1.5rem;
